third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-stable/try_transmute-src-not-intobytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-stable/try_transmute-src-not-intobytes.rs:18:47
   |
18 |     let src_not_into_bytes: Result<AU16, _> = try_transmute!(NotZerocopy(AU16(0)));
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy<AU16>`
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy<AU16>`
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `try_transmute`
  --> src/util/macro_util.rs
   |
   | pub fn try_transmute<Src, Dst>(src: Src) -> Result<Dst, ValidityError<Src, Dst>>
   |        ------------- required by a bound in this function
   | where
   |     Src: IntoBytes,
   |          ^^^^^^^^^ required by this bound in `try_transmute`
   = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
